--- a/root/_posts/2014-09-27-a-full-and-comprehensive-style-test.html
+++ b/root/_posts/2014-09-27-a-full-and-comprehensive-style-test.html
@@ -6,8 +6,8 @@ title: A Full and Comprehensive Style Test
 date: 2014-09-27 10:18:00
 tags: test content
 subclass: 'post tag-test tag-content'
-author: casper
-categories: casper
+author: dominik
+categories: dominik
 ---
 
 <p>This is just an <em>ipsis verbis</em> copy of the first example running on the <a href="http://demo.ghost.io">Ghost Demo</a>. This shows how you can use html styling to achieve your hopes.</p>
