--- a/root/index.html
+++ b/root/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Finding The Way Home
-cover: 'assets/images/cover1.jpg'
+title: Dominik B. Grzelak's personal page
+cover: 'assets/images/cover-laptop.webp'
 class: 'home-template'
 navigation: True
 current: home
