Rollback from deployment using Github Actions
This doesn't support plugins thus not being able to generate
authors and tags pages.

--- a/root/_drafts/a-full-and-comprehensive-style-test.html
+++ b/root/_drafts/a-full-and-comprehensive-style-test.html
@@ -1,5 +1,6 @@
 ---
 layout: post
+cover: 'assets/images/cover3.jpg'
 navigation: True
 title: A Full and Comprehensive Style Test
 tags: test content
